# huuid

./: README.md  setup.cfg  setup.py
.github/workflows/: workflow.yml
huuid/: __init__.py
tests/: demo.py
