[metadata]
name = huuid
version = 0.8.0
author = Dirk Winkel
author_email = it@polarwinkel.de
description = library to convert uuids forth and back to a human-readable and pronounceable format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polarwinkel/huuid
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    Topic :: Database
    Topic :: Security
    Topic :: Software Development :: Libraries
    Topic :: System
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3 :: Only
[options]
packages = find:
python_requires = >=3.7
